codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(rendered)
---
✦ Reviewing 2 approval requests                       0s · Esc interrupt
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'

╭─────────────────────────────────────────────────────────── tab queue ╮
┃ ›                                                                    │
╰──────────────────────────────────────────────────────────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
