codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_write_stdin_denials_popup.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: "render_bottom_popup(&chat, 110)"
---
  Auto-review Denials
  Select a denied action to approve.

  / ▏
  Action                                  Rationale
› send input to terminal 42: "confirm\n"  Would confirm a destructive operation.

  ↑/↓ choose · enter confirm · esc back
