codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_write_stdin_review_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
✦ Reviewing approval request                                  0s · Esc interrupt
  └ send input to terminal 42: "confirm\n"

╭─────────────────────────────────────────────────────────────────── tab queue ╮
┃ ›                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
